--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "framework7-vue",
+  "name": "@zhennann/framework7-vue",
   "version": "2.0.10",
   "description": "Build full featured iOS & Android apps using Framework7 & Vue",
   "main": "dist/framework7-vue.js",
@@ -7,7 +7,7 @@
   "module": "dist/framework7-vue.esm.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/framework7io/framework7-vue.git"
+    "url": "https://github.com/zhennann/framework7-vue.git"
   },
   "keywords": [
     "vue",
@@ -40,7 +40,7 @@
     "test": "npm run build:prod && npm run lint"
   },
   "bugs": {
-    "url": "https://github.com/framework7io/framework7-vue/issues"
+    "url": "https://github.com/zhennann/framework7-vue/issues"
   },
   "homepage": "http://framework7.io/vue/",
   "engines": {
